[build-dependencies]
vergen = '3'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.0'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.substrate-network]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'c5077d1e4526e8290090cad54d8c18eb819a8cfe'

[[bin]]
name = 'substratekitties'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'
